Updated mod's GUI for Java 21 and 1.20.6